Revert "fix some bugs 🐛   and alignment problems"
This reverts commit 90abf59dbb5ee8fe1dbf534daa6efa33c3bd60b7.

--- a/css/styles.css
+++ b/css/styles.css
@@ -97,10 +97,10 @@ table {
      
     }
 
-    main {
-      
-        margin: 0 auto;
-      
+
+    body, html {
+      width: 100%;
+      overflow-x: hidden;
     }
 
 
@@ -118,6 +118,7 @@ table {
   background-color: var(--primary-color);
   color: var(--secondary-color);
   padding: 1.5em;
+ 
 }
 
   
@@ -175,7 +176,7 @@ table {
     background-color: transparent;
     border: none;
     cursor: pointer;
-    margin-left: 10px;
+    margin-left: 5px;
     font-size: 20px;
     color: var(--secondary-color);
   }
@@ -284,22 +285,19 @@ table {
     display: none;
 }
 
-
-
-.section-heading {
-  text-align: center;
-  margin: 80px 0 50px 0;
-}
-
-.section-heading h2 {
+.portfolio-heading h2 {
+  width: 100%;
+  text-align: center; 
+  padding: 1em 0;
+  margin: 0;
   font-size: 2em;
 }
 
- .portfolio-grid {
-  margin: 0 10%;
-  padding: 0;
+
+ .portfolio-items-wrapper{
+  margin: 0;
+  padding: 0 100px;
   display: grid;
-  gap: 30px 0;
   grid-template-columns: repeat(3, minmax(350px, 1fr));
   grid-auto-rows: auto;
   overflow-x: hidden;
@@ -307,16 +305,21 @@ table {
   scrollbar-color: #888 #f0f0f0;
   -webkit-overflow-scrolling: touch; /* for mobile devices */
   justify-items: center; 
-  align-items: start; 
+  align-items: center; 
 }
 
 .portfolio-item {
   display: flex;
-  flex-direction: column;
+  flex-direction: column; /* stacks the img, title, and description vertically */
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-between; /* distributes space evenly between items for images too */
   width: 350px;
+  height: 350px;
+  padding: 175px 25px;
+  padding-top: 50px;
+  overflow: hidden;
   border-radius: 8px;
+ 
   color: #333;
 }
 
@@ -329,7 +332,7 @@ table {
   font-size: 1.2rem;
   color: var(--primary-color); 
   display: flex;
-  margin-top: 20px; 
+  margin-top: 30px; 
 }
 
 body.dark-mode .portfolio-title {
@@ -348,20 +351,31 @@ body.dark-mode .portfolio-title {
 
 .about-container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-direction: column;  /* Align items in a column */
+  align-items:center; 
+  justify-content: center;
+  width: 100%;
+  margin: 4em auto;
+  padding: 0;
+}
+
+.about-heading {
+  width: 100%;
+  text-align: center; 
+  margin: 1em auto;
+  font-size: 2em;
 }
 
 .about-grid {
-  
+  padding: 20px;
   display: grid;
-  grid-template-columns: repeat(2, 1fr); /* Create two equally wide columns */
-  gap: 2em; /* Add some space between columns */
- 
+  grid-template-columns: 1fr 1fr; 
+  grid-gap: 10%
 }
 
 .about-img img {
-  max-width: 500px; 
+  max-width: 500px;
+  width: 100%; 
   height: auto;
 }
 
@@ -372,15 +386,13 @@ body.dark-mode .portfolio-title {
 }
 
 .about-text {
-  max-width: 550px;
-  
+  max-width: 500px;
 }
 
-
 .about-text p {
-  font-size: 1.2em;
+  font-size: 1.02em;
   line-height: 1.5;
-  margin-bottom: 2em;
+  margin-bottom: 1.5em;
   word-wrap: normal;
 }
 
@@ -388,20 +400,21 @@ body.dark-mode .portfolio-title {
 .about-text p:first-of-type::first-letter {
   font-size: 300%;
   float: left;
-  padding: 5px 10px 0 0;
-  line-height: .8; 
+  padding-right: 5px;
+  line-height: 1; 
 }
 
 .about-text p:first-of-type {
   clear: both;
 }
 
+
 /* contact section */
 
 .contact-container {
   max-width: 500px;
-  margin: 3em auto;
-  padding: 3em ;
+  margin: 2em auto;
+  padding: 2em;
 }
 
 .contact-container h2 {
